--- a/week_02_linear_models/Homework/hw_2_linear_models.ipynb
+++ b/week_02_linear_models/Homework/hw_2_linear_models.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "UHITb0dimYrx"
       },
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "08eWyQhHksXA"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "nXuTAfcvk6kG"
       },
@@ -163,12 +163,12 @@
         "    :param r: np.array[2]: float вектор длины 2\n",
         "    :return: np.array[2]: float вектор длины 2\n",
         "    \"\"\"\n",
-        "    return # YOUR CODE"
+        "    return np.sin(2*r)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "Pejbp3fvMrWn"
       },
@@ -181,11 +181,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "SpH4AjBBk8Xo"
+        "id": "SpH4AjBBk8Xo",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "5d3efd4a-4fb3-469c-e7b6-7aeff21789d6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-1155003594.py, line 25)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1155003594.py\"\u001b[0;36m, line \u001b[0;32m25\u001b[0m\n\u001b[0;31m    curr_r -= # YOUR CODE. Не забудьте про lr!\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
         "def grad_descent_2d(f, grad_f, lr, num_iter=100, r0=None):\n",
         "    \"\"\"\n",
