--- a/week_02_linear_models/Homework/hw_2_linear_models.ipynb
+++ b/week_02_linear_models/Homework/hw_2_linear_models.ipynb
@@ -462,7 +462,7 @@
         "id": "wlO7-4hylVSU",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 572
+          "height": 658
         },
         "outputId": "09c0b6b2-1498-4d82-ef3a-81915afb8abd"
       },
@@ -656,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "2rcTIc80AnfK"
       },
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "u5RcOhSbAidQ"
       },
@@ -698,14 +698,16 @@
         "            for X_batch, y_batch in generate_batches(X_train, y, batch_size):\n",
         "                # В X_train уже добавлен вектор 1\n",
         "\n",
-        "                predictions = # YOUR CODE: предскажите вероятности на X_batch\n",
-        "                loss = # YOUR CODE: вычислите loss на текущем батче\n",
+        "                predictions = self._predict_proba_internal(X_batch)\n",
+        "                loss = self.__loss(y_batch, predictions)\n",
         "\n",
         "                assert (np.array(loss).shape == tuple()), \"Лосс должен быть скаляром!\"\n",
         "\n",
-        "                losses.append(<YOUR CODE>)\n",
+        "                losses.append(loss)\n",
         "\n",
         "                # YOUR CODE: обновите self.w по формуле градиентного спуска. Используйте функцию self.get_grad для вычисления градиента. Не забудьте про learning rate!\n",
+        "                grad = self.get_grad(X_batch, y_batch, predictions)\n",
+        "                self.w -= lr * grad\n",
         "\n",
         "        return losses\n",
         "\n",
@@ -729,7 +731,7 @@
         "        # компонент градиента из логрегрессии\n",
         "        # следите за размерностями\n",
         "\n",
-        "        grad_basic = # YOUR CODE\n",
+        "        grad_basic = X_batch.T @ (predictions - y_batch)\n",
         "        assert grad_basic.shape == (X_batch.shape[1],) , \"Градиенты должны быть столбцом из k_features + 1 элементов\"\n",
         "\n",
         "        return grad_basic\n",
@@ -773,7 +775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "oex7f__9Cpsu"
       },
@@ -790,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "Jy7nGo7kR0bN"
       },
